[workspace]
members = ["libraries/*", "binaries/*"]
resolver = "2"

[profile.release]
panic = "abort"
debug = 1
overflow-checks = true
lto = "thin"
opt-level = 3

# TCPing library specific profile (moved from library Cargo.toml to resolve warning)
[profile.release-lto]
inherits = "release"
lto = true
