[package]
name = "netinfo"
version = "0.1.0"
edition = "2024"

[lib]
name = "netinfo"
path = "src/lib.rs"
crate-type = ["rlib"]

[target.'cfg(target_os = "windows")'.dependencies]
dunce = "1.0"
winroute = "0.2.2"
schannel = "0.1.28"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security_Cryptography",
]}

[target.'cfg(target_os = "linux")'.dependencies]
neli = "0.7.1"
openssl-probe = "0.1.6"

[dependencies]
netstat2 = "0.11.2"
local-ip-address = "0.6.5"
anyhow = "1.0"
x509-parser = "0.18.0"
pem = "3.0.6"
base64 = "0.22.1"
